--- a/blog/templates/blog/category_confirm_delete.html
+++ b/blog/templates/blog/category_confirm_delete.html
@@ -10,7 +10,7 @@
     {% csrf_token %}
     {% form form %}
 
-    <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-flamingo-600 hover:bg-flamingo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-flamingo-500 mt-2">{{ title }}</button>
+    <button type="submit" class="kho-button-forms kho-button-submit-delete mt-2">{{ title }}</button>
   </form>
   {{ form.media }}
 {% endblock content %}
