--- a/blog/templates/blog/edit_post.html
+++ b/blog/templates/blog/edit_post.html
@@ -244,7 +244,7 @@
       {% endfor %}
     </div>
 
-    <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-cornflower-600 hover:bg-cornflower-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cornflower-500">{{ title }}</button>
+    <button type="submit" class="kho-button-forms kho-button-submit">{{ title }}</button>
   </form>
 
   <div class="prose dark:prose-invert lg:prose-lg xl:prose-xl">
