--- a/khoBlog/templates/account/edit_profile.html
+++ b/khoBlog/templates/account/edit_profile.html
@@ -170,7 +170,7 @@
         </div>
       </div>
 
-      <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-cornflower-600 hover:bg-cornflower-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cornflower-500">{{ title }}</button>
+      <button type="submit" class="kho-button-forms kho-button-submit">{{ title }}</button>
     </form>
   {% else %}
     <p>This isn't your profile. <a href="{{ user.get_absolute_update_url }}">Edit your profile</a></p>
