--- a/khoBlog/templates/account/password_reset.html
+++ b/khoBlog/templates/account/password_reset.html
@@ -15,7 +15,7 @@
 
     {% form form %}
 
-    <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-cornflower-600 hover:bg-cornflower-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cornflower-500">{{ title }}</button>
+    <button type="submit" class="kho-button-forms kho-button-submit">{{ title }}</button>
   </form>
 
   <p>{% blocktrans %}Please contact us if you have any trouble resetting your password.{% endblocktrans %}</p>
