--- a/khoBlog/templates/socialaccount/login.html
+++ b/khoBlog/templates/socialaccount/login.html
@@ -22,6 +22,6 @@
   <form method="post">
     {% csrf_token %}
 
-    <button class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-cornflower-600 hover:bg-cornflower-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cornflower-500" type="submit">Continue</button>
+    <button class="kho-button-forms kho-button-submit" type="submit">Continue</button>
   </form>
 {% endblock %}
