--- a/polls/templates/polls/results.html
+++ b/polls/templates/polls/results.html
@@ -12,5 +12,5 @@
     {% endfor %}
   </ul>
 
-  <a class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-cornflower-600 hover:bg-cornflower-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cornflower-500" href="{% url 'polls:detail' question.id %}">Vote again ?</a>
+  <a class="kho-button-forms kho-button-submit" href="{% url 'polls:detail' question.id %}">Vote again ?</a>
 {% endblock content %}
