--- a/portfolio/templates/portfolio/project_confirm_delete.html
+++ b/portfolio/templates/portfolio/project_confirm_delete.html
@@ -9,7 +9,7 @@
     <h4>Are you sure ?</h4>
     {{ form.as_p }}
 
-    <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-flamingo-600 hover:bg-flamingo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-flamingo-500 mt-2">{{ title }}</button>
+    <button type="submit" class="kho-button-forms kho-button-submit-delete mt-2">{{ title }}</button>
   </form>
 
 {% endblock content %}
