--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -37,6 +37,18 @@
         @apply dark:bg-jumbo-700 dark:border-cornflower-100/50 dark:text-jumbo-50 border-cornflower-400 bg-cornflower-50 text-cornflower-600;
     }
 
+    .kho-button-forms {
+        @apply flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white focus:outline-none focus:ring-2 focus:ring-offset-2;
+    }
+
+    .kho-button-submit {
+        @apply bg-cornflower-600 hover:bg-cornflower-700 focus:ring-cornflower-500;
+    }
+
+    .kho-button-submit-delete{
+        @apply bg-flamingo-600 hover:bg-flamingo-700 focus:ring-flamingo-500;
+    }
+
     .menu_mobile_buttons {
         @apply bg-cornflower-800 mt-1 block rounded-md px-3 py-2 text-base font-medium text-white first:mt-0;
     }
