--- a/todo/templates/todo/complete_task.html
+++ b/todo/templates/todo/complete_task.html
@@ -10,6 +10,6 @@
     {% csrf_token %}
     {% form form %}
 
-      <button type="submit" class="flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-cornflower-600 hover:bg-cornflower-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cornflower-500 mt-2">{{ title }}</button>
+      <button type="submit" class="kho-button-forms kho-button-submit mt-2">{{ title }}</button>
     </form>
   {% endblock content %}
