--- a/khoBlog/templates/authentication/includes/signup_form.html
+++ b/khoBlog/templates/authentication/includes/signup_form.html
@@ -8,7 +8,7 @@
     </h2>
     <p class="mt-2 text-center text-sm text-gray-600 dark:text-jumbo-200">
       Already have an account?
-      <a href="{% url 'account_login' %}{% if next %}?next={{ next }}{% endif %}" rel="nofollow" class="font-medium text-cornflower-600 hover:text-cornflower-500 dark:text-jumbo-200 dark:hover:text-jumbo-300">Log in</a>
+      <a href="{% url 'account_login' %}{% if next %}?next={{ next }}{% endif %}" rel="nofollow" class="font-medium text-cornflower-600 dark:text-jumbo-200 hover:underline">Log in</a>
     </p>
   </div>
 
@@ -80,7 +80,7 @@
             <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
           <div class="mt-1">
-            {{ form.username|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 focus:outline-none focus:ring-cornflower-500 focus:border-cornflower-400 sm:text-sm"|attr:"placeholder:Username" }}
+            {{ form.username|add_class:"kho-button-text kho-button-bg kho-button-border kho-button-border-focus appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 focus:outline-none sm:text-sm"|attr:"placeholder:Username" }}
           </div>
           {% if form.username.help_text %}
             <span class="text-sm text-gray-700 dark:text-jumbo-200">{{ form.username.help_text }}</span>
@@ -95,7 +95,7 @@
             <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
           <div class="mt-1">
-            {{ form.email|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 focus:outline-none focus:ring-cornflower-500 focus:border-cornflower-400 sm:text-sm"|attr:"placeholder:Emain" }}
+            {{ form.email|add_class:"kho-button-text kho-button-bg kho-button-border kho-button-border-focus appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 focus:outline-none sm:text-sm"|attr:"placeholder:Emain" }}
           </div>
           {% if form.email.help_text %}
             <span class="text-sm text-gray-700 dark:text-jumbo-200">{{ form.email.help_text }}</span>
@@ -110,10 +110,10 @@
             Last name
           </label>
           <div class="mt-1">
-            {{ form.first_name|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 focus:outline-none focus:ring-cornflower-500 focus:border-cornflower-400 sm:text-sm"|attr:"placeholder:First name" }}
+            {{ form.first_name|add_class:"kho-button-text kho-button-bg kho-button-border kho-button-border-focus appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 focus:outline-none sm:text-sm"|attr:"placeholder:First name" }}
           </div>
           <div class="mt-1">
-            {{ form.last_name|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 focus:outline-none focus:ring-cornflower-500 focus:border-cornflower-400 sm:text-sm"|attr:"placeholder:Last name" }}
+            {{ form.last_name|add_class:"kho-button-text kho-button-bg kho-button-border kho-button-border-focus appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 focus:outline-none sm:text-sm"|attr:"placeholder:Last name" }}
           </div>
         </div>
 
@@ -125,7 +125,7 @@
             <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
           <div class="mt-1">
-            {{ form.password1|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 sm:text-sm"|attr:"placeholder:Password" }}
+            {{ form.password1|add_class:"kho-button-text kho-button-bg kho-button-border kho-button-border-focus appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 sm:text-sm"|attr:"placeholder:Password" }}
           </div>
           {% if form.password1.help_text %}
             <span class="text-sm text-gray-700 dark:text-jumbo-200">{{ form.password1.help_text }}</span>
@@ -140,7 +140,7 @@
             <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
           <div class="mt-1">
-            {{ form.password2|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 sm:text-sm"|attr:"placeholder:Confirm password" }}
+            {{ form.password2|add_class:"kho-button-text kho-button-bg kho-button-border kho-button-border-focus appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 sm:text-sm"|attr:"placeholder:Confirm password" }}
           </div>
           {% if form.password2.help_text %}
             <span class="text-sm text-gray-700 dark:text-jumbo-200">{{ form.password2.help_text }}</span>
@@ -155,15 +155,13 @@
             <small class="text-red-600 dark:text-flamingo-600">{{ error }}</small>
           {% endfor %}
           <div class="mt-1">
-            {{ form.captcha|add_class:"kho-button-text kho-button-bg kho-button-border appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 sm:text-sm"|attr:"placeholder:Captcha" }}
+            {{ form.captcha|add_class:"kho-button-text kho-button-bg kho-button-border kho-button-border-focus appearance-none block w-full px-3 py-2 border border-gray-300 dark:border-jumbo-700 rounded-md shadow-sm placeholder-gray-400 dark:placeholder-jumbo-400 sm:text-sm"|attr:"placeholder:Captcha" }}
           </div>
         </div>
 
-        <div>
-          <button type="submit" class="kho-button-text kho-button-bg kho-button-bg-hover w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium focus:outline-none focus:ring-2 focus:ring-offset-2 mt-2">
-            Sign up
-          </button>
-        </div>
+        <button type="submit" class="kho-button-forms kho-button-submit mt-2">
+          Sign up
+        </button>
       </form>
     </div>
   </div>
