better use of Alpine, removed unused flyout

--- a/khoBlog/templates/tailwind/display_fact.html
+++ b/khoBlog/templates/tailwind/display_fact.html
@@ -23,7 +23,7 @@
               {% endif %}
             </span>
             <span class="text-gray-900 dark:text-jumbo-200">
-              {{ object }}
+              {{ object }} - {{ timesince }} year{{ timesince|pluralize }} ago
             </span>
           </p>
           <div class="prose prose-gray dark:prose-jumbo dark:prose-invert">
