rounding things around

--- a/khoBlog/templates/comments/form.html
+++ b/khoBlog/templates/comments/form.html
@@ -38,7 +38,7 @@
     {% endfor %}
 
     <input type="hidden" name="next" value="{% url 'comments-xtd-sent' %}"/>
-    <input class="inline-flex items-center justify-center px-3 py-2 border border-transparent rounded-md shadow-sm text-xs lg:text-base font-medium text-white bg-cornflower-600 hover:bg-cornflower-700 cursor-pointer" type="submit" value="Add comment" id="id_submit"/>
+    <input class="inline-flex items-center justify-center px-3 py-2 border border-transparent rounded-xl shadow-sm text-xs lg:text-base font-medium text-white bg-cornflower-600 hover:bg-cornflower-700 cursor-pointer" type="submit" value="Add comment" id="id_submit"/>
   </form>
 {% else %}
   <p>Please
