--- a/khoBlog/templates/tailwind/super_buttons.html
+++ b/khoBlog/templates/tailwind/super_buttons.html
@@ -1,6 +1,6 @@
 <section class="mt-4 flex space-x-3 md:mt-0">
   <div class="mx-auto w-full text-right">
-    <span class="relative z-0 inline-flex shadow-sm rounded-md text-left">
+    <span class="relative z-0 inline-flex shadow-sm rounded-xl text-left">
       <a href="{{ object.get_absolute_update_url }}" type="button" class="superbutton_main_action">
         Edit
       </a>
