--- a/khoBlog/templates/tailwind/menu.html
+++ b/khoBlog/templates/tailwind/menu.html
@@ -12,7 +12,7 @@
       </div>
       {% theme_button "darkLightm" %}
       <div class="-mr-2 -my-2 md:hidden">
-        <button type="button" class="rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-jumbo-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-cornflower-500 dark:focus:ring-cornflower-400/75" @click="open=!open" @mousedown="if (open) $event.preventDefault()" aria-expanded="true" :aria-expanded="open.toString()">
+        <button type="button" class="rounded-xl p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-jumbo-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-cornflower-500 dark:focus:ring-cornflower-400/75" @click="open=!open" @mousedown="if (open) $event.preventDefault()" aria-expanded="true" :aria-expanded="open.toString()">
           <span class="sr-only">Open menu</span>
           <svg class="h-6 w-6" x-description="Heroicon name: outline/menu" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor" aria-hidden="true">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
@@ -39,14 +39,14 @@
             <a href="{% url 'account_login' %}" class="text-xs lg:text-base font-medium text-gray-500 dark:text-jumbo-50 hover:underline">
               Log in
             </a>
-            <a href="{% url 'accounts:signup' %}" class="ml-8 inline-flex items-center justify-center px-3 py-2 lg:px-4 lg:py-2 border border-transparent rounded-md shadow-sm text-xs lg:text-base font-medium text-white bg-cornflower-600 hover:bg-cornflower-700">
+            <a href="{% url 'accounts:signup' %}" class="ml-8 inline-flex items-center justify-center px-3 py-2 lg:px-4 lg:py-2 border border-transparent rounded-xl shadow-sm text-xs lg:text-base font-medium text-white bg-cornflower-600 hover:bg-cornflower-700">
               Sign up
             </a>
           {% else %}
             <a href="{% url 'account_logout' %}" class="text-xs lg:text-base font-medium text-gray-500 dark:text-jumbo-50 hover:underline">
               Log out
             </a>
-            <a href="{% url 'accounts:profile' slug=user.slug %}" class="ml-8 inline-flex items-center justify-center px-3 py-2 border border-transparent rounded-md shadow-sm text-xs lg:text-base font-medium text-white bg-cornflower-600 hover:bg-cornflower-700">
+            <a href="{% url 'accounts:profile' slug=user.slug %}" class="ml-8 inline-flex items-center justify-center px-3 py-2 border border-transparent rounded-xl shadow-sm text-xs lg:text-base font-medium text-white bg-cornflower-600 hover:bg-cornflower-700">
               Your profile
             </a>
           {% endif %}
@@ -56,14 +56,14 @@
   </div>
 
   <div x-show="open" x-transition:enter="duration-200 ease-out" x-transition:enter-start="opacity-0 scale-95" x-transition:enter-end="opacity-100 scale-100" x-transition:leave="duration-100 ease-in" x-transition:leave-start="opacity-100 scale-100" x-transition:leave-end="opacity-0 scale-95" x-description="Mobile menu, show/hide based on mobile menu state." class="absolute z-30 top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden" x-ref="panel" @click.away="open = false">
-    <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-white dark:bg-jumbo-800 divide-y-2 divide-gray-50 dark:divide-jumbo-200">
+    <div class="rounded-2xl shadow-lg ring-1 ring-black ring-opacity-5 bg-white dark:bg-jumbo-800 divide-y-2 divide-gray-50 dark:divide-jumbo-200">
       <div class="pt-5 pb-6 px-5 sm:pb-8">
         <div class="flex items-center justify-between">
           <div>
             <img class="h-8 w-auto" width="2rem" height="2rem" src="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}" alt="Khodok's Logo">
           </div>
           <div class="-mr-2">
-            <button type="button" class="bg-white dark:bg-jumbo-700 rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-jumbo-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-cornflower-500 dark:focus:ring-cornflower-400/75" @click="open=false">
+            <button type="button" class="bg-white dark:bg-jumbo-700 rounded-xl p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-jumbo-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-cornflower-500 dark:focus:ring-cornflower-400/75" @click="open=false">
               <span class="sr-only">Close menu</span>
               <svg class="h-6 w-6" x-description="Heroicon name: outline/x" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
@@ -88,7 +88,7 @@
         </div>
         <div class="mt-6">
           {% if not user.is_authenticated %}
-            <a href="{% url 'accounts:signup' %}" class="w-full flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-cornflower-600 hover:bg-cornflower-700">
+            <a href="{% url 'accounts:signup' %}" class="w-full flex items-center justify-center px-4 py-2 border border-transparent rounded-xl shadow-sm text-base font-medium text-white bg-cornflower-600 hover:bg-cornflower-700">
               Sign up
             </a>
             <p class="mt-6 text-center text-base font-medium text-gray-500">
@@ -97,7 +97,7 @@
               </a>
             </p>
           {% else %}
-            <a href="{% url 'accounts:profile' slug=user.slug %}" class="w-full flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-cornflower-600 hover:bg-cornflower-700">
+            <a href="{% url 'accounts:profile' slug=user.slug %}" class="w-full flex items-center justify-center px-4 py-2 border border-transparent rounded-xl shadow-sm text-base font-medium text-white bg-cornflower-600 hover:bg-cornflower-700">
               Your profile
             </a>
             <p class="mt-6 text-center text-base font-medium text-gray-500">
