--- a/khoBlog/templates/tailwind/super_buttons.html
+++ b/khoBlog/templates/tailwind/super_buttons.html
@@ -15,38 +15,48 @@
         <div x-show="open" x-transition:enter="transition ease-out duration-100" x-transition:enter-start="transform opacity-0 scale-95" x-transition:enter-end="transform opacity-100 scale-100" x-transition:leave="transition ease-in duration-75" x-transition:leave-start="transform opacity-100 scale-100" x-transition:leave-end="transform opacity-0 scale-95" class="superbutton_dropdown_items" x-ref="menu-items" x-description="Dropdown menu, show/hide based on menu state." x-bind:aria-activedescendant="activeDescendant" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1" @keydown.arrow-up.prevent="onArrowUp()" @keydown.arrow-down.prevent="onArrowDown()" @keydown.tab="open = false" @keydown.enter.prevent="open = false; focusButton()" @keyup.space.prevent="open = false; focusButton()">
           {% if object.get_absolute_publish_url or object.get_absolute_publish_withdrawn_url %}
             {% if not object.pub_date %}
-              {% if object.get_absolute_publish_url %}
-                <a class="dropdown_item" href="{{ object.get_absolute_publish_url }}">
-                  Publish
-                </a>
-              {% endif %}
+              <div class="dropdown_item_container" role="none">
+                {% if object.get_absolute_publish_url %}
+                  <a class="dropdown_item" href="{{ object.get_absolute_publish_url }}">
+                    Publish
+                  </a>
+                {% endif %}
 
-              {% if object.get_absolute_publish_withdrawn_url %}
-                <a class="dropdown_item" href="{{ object.get_absolute_publish_withdrawn_url }}">
-                  Publish Withdrawn
-                </a>
-              {% endif %}
+                {% if object.get_absolute_publish_withdrawn_url %}
+                  <a class="dropdown_item" href="{{ object.get_absolute_publish_withdrawn_url }}">
+                    Publish Withdrawn
+                  </a>
+                {% endif %}
+              </div>
             {% endif %}
           {% endif %}
 
           {% if object.get_absolute_needs_review_url %}
-            {% if not object.needs_reviewing %}
-              <a class="dropdown_item" href="{{ object.get_absolute_needs_review_url }}">
-                Mark as Needs Reviewing
-              </a>
-            {% else %}
-              <button class="dropdown_item w-full text-left" disabled="disabled">
-                Needs Reviewing
-              </button>
-            {% endif %}
+            <div class="dropdown_item_container" role="none">
+              {% if not object.needs_reviewing %}
+                <a class="dropdown_item" href="{{ object.get_absolute_needs_review_url }}">
+                  Mark as Needs Reviewing
+                </a>
+              {% else %}
+                <button class="dropdown_item w-full text-left" disabled="disabled">
+                  Needs Reviewing
+                </button>
+              {% endif %}
+            </div>
           {% endif %}
           {% if object.get_absolute_clone_url %}
-            <a href="{{ object.get_absolute_clone_url }}" class="dropdown_item">Duplicate</a>
+            <div class="dropdown_item_container" role="none">
+              <a href="{{ object.get_absolute_clone_url }}" class="dropdown_item">Duplicate</a>
+            </div>
           {% endif %}
-          <a class="dropdown_item" href="{{ object.get_absolute_admin_update_url }}">
-            Edit in Admin
-          </a>
-          <a href="{{ object.get_absolute_delete_url }}" class="dropdown_item">Delete</a>
+          <div class="dropdown_item_container" role="none">
+            <a class="dropdown_item" href="{{ object.get_absolute_admin_update_url }}">
+              Edit in Admin
+            </a>
+          </div>
+          <div class="dropdown_item_container" role="none">
+            <a href="{{ object.get_absolute_delete_url }}" class="dropdown_item">Delete</a>
+          </div>
         </div>
       </span>
     </span>
