--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -105,6 +105,18 @@
         @apply dark:bg-jumbo-700 dark:border-jumbo-600 dark:text-jumbo-50 dark:divide-jumbo-600 absolute right-0 mt-2 w-56 origin-top-right divide-y divide-gray-100 rounded-xl bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none;
     }
 
+    .superbutton_dropdown_items .dropdown_item_container {
+        @apply first:!pt-0 last:!pb-0;
+    }
+
+    .superbutton_dropdown_items .dropdown_item_container:first-of-type .dropdown_item:first-of-type {
+        @apply rounded-t-xl;
+    }
+
+    .superbutton_dropdown_items .dropdown_item_container:last-of-type .dropdown_item:last-of-type {
+        @apply rounded-b-xl;
+    }
+
     .prose .tabbed-set {
         @apply relative flex flex-wrap;
     }
@@ -247,7 +259,11 @@
     }
 
     .dropdown_item {
-        @apply dark:text-jumbo-50 dark:hover:bg-jumbo-800 hover:dropdown_item_active dark:disabled:bg-jumbo-900 disabled:dark:hover:text-jumbo-50 block px-4 py-2 text-sm text-gray-700 disabled:cursor-not-allowed disabled:bg-gray-400 disabled:hover:text-gray-700 first:rounded-t-xl last:rounded-b-xl;
+        @apply dark:text-jumbo-50 dark:hover:bg-jumbo-800 hover:dropdown_item_active dark:disabled:bg-jumbo-900 disabled:dark:hover:text-jumbo-50 block px-4 py-2 text-sm text-gray-700 disabled:cursor-not-allowed disabled:bg-gray-400 disabled:hover:text-gray-700;
+    }
+
+    .dropdown_item_container {
+        @apply py-1;
     }
 
     .dropdown_item_active {
