menu fix for mobile

--- a/khoBlog/templates/tailwind/menu.html
+++ b/khoBlog/templates/tailwind/menu.html
@@ -73,8 +73,8 @@
         </div>
         <div class="mt-6 sm:mt-8">
           <nav>
-            <div class="grid gap-7 grid-cols-2 sm:gap-y-8 sm:gap-x-4">
-              {% links_menu urls mobile=True %}
+            <div class="grid gap-4 grid-cols-2">
+              {% links_menu urls "mobile" %}
             </div>
           </nav>
         </div>
