--- a/khoBlog/templates/tailwind/menu_flyout.html
+++ b/khoBlog/templates/tailwind/menu_flyout.html
@@ -16,7 +16,7 @@
             Read content
           </h3>
           <ul role="list" class="mt-5 space-y-6">
-            {% links_menu urls %}
+            {% links_menu urls "desktop" %}
           </ul>
         </div>
         <div>
