--- a/khoBlog/templates/tailwind/user_super_buttons.html
+++ b/khoBlog/templates/tailwind/user_super_buttons.html
@@ -2,7 +2,7 @@
   <div class="mx-auto w-full text-right">
     <span class="relative z-0 inline-flex shadow-sm rounded-xl text-left">
       <a href="{{ object.get_absolute_update_url }}" type="button" class="superbutton_main_action">
-        Edit
+        Edit profile
       </a>
       <span x-data="{ open: false }" @keydown.escape.stop="open = false; focusButton()" @click.away="open=false" class="-ml-px relative block">
         <button type="button" class="superbutton_dropdown_button" id="option-menu-button" x-ref="button" @click="open=!open" @keyup.space.prevent="onButtonEnter()" @keydown.enter.prevent="onButtonEnter()" aria-expanded="false" aria-haspopup="true" x-bind:aria-expanded="open.toString()" @keydown.arrow-up.prevent="onArrowUp()" @keydown.arrow-down.prevent="onArrowDown()">
@@ -12,7 +12,7 @@
           </svg>
         </button>
 
-        <div x-show="open" x-transition:enter="transition ease-out duration-100" x-transition:enter-start="transform opacity-0 scale-95" x-transition:enter-end="transform opacity-100 scale-100" x-transition:leave="transition ease-in duration-75" x-transition:leave-start="transform opacity-100 scale-100" x-transition:leave-end="transform opacity-0 scale-95" class="superbutton_dropdown_items" x-ref="menu-items" x-description="Dropdown menu, show/hide based on menu state." x-bind:aria-activedescendant="activeDescendant" role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1" @keydown.arrow-up.prevent="onArrowUp()" @keydown.arrow-down.prevent="onArrowDown()" @keydown.tab="open = false" @keydown.enter.prevent="open = false; focusButton()" @keyup.space.prevent="open = false; focusButton()">
+        <div x-show="open" x-transition:enter="transition ease-out duration-100" x-transition:enter-start="transform opacity-0 scale-95" x-transition:enter-end="transform opacity-100 scale-100" x-transition:leave="transition ease-in duration-75" x-transition:leave-start="transform opacity-100 scale-100" x-transition:leave-end="transform opacity-0 scale-95" class="superbutton_dropdown_items" x-ref="menu-items" x-description="Dropdown menu, show/hide based on menu state." role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1" @keydown.arrow-up.prevent="onArrowUp()" @keydown.arrow-down.prevent="onArrowDown()" @keydown.tab="open = false" @keydown.enter.prevent="open = false; focusButton()" @keyup.space.prevent="open = false; focusButton()">
           <div class="dropdown_item_container" role="none">
             <a class="dropdown_item" href="{% url 'accounts:edit_password' %}">Modify Password</a>
             <a class="dropdown_item" href="{% url 'accounts:connections' %}">Edit Connections</a>
