--- a/khoBlog/templates/tailwind/menu.html
+++ b/khoBlog/templates/tailwind/menu.html
@@ -1,4 +1,4 @@
-{% load static links_menu theme_buttons menu_footer_set %}
+{% load static links_menu theme_buttons menu_footer_set weblog %}
 
 <div class="relative" x-data="{ open: false, focus: false }" @keydown.escape="onEscape" @close-popover-group.window="onClosePopoverGroup">
   <div class="absolute inset-0 shadow z-30 pointer-events-none" aria-hidden="true"></div>
@@ -35,15 +35,52 @@
           {% endif %}
         </nav>
         <div class="flex items-center md:ml-12">
+          <div x-cloak x-data="{ open: false }">
+            <button class="text-xs lg:text-base font-medium text-gray-500 dark:text-jumbo-50 hover:underline" @click="open=!open">Latest changes</button>
+
+            <div @keydown.window.escape="open = false" x-show="open" class="relative z-10" aria-labelledby="slide-over-title" x-ref="dialog" aria-modal="true">
+              <div x-description="Background backdrop, show/hide based on slide-over state." class="fixed inset-0"></div>
+
+              <div class="fixed inset-0 overflow-hidden">
+                <div class="absolute inset-0 overflow-hidden">
+                  <div class="pointer-events-none fixed inset-y-0 right-0 flex max-w-full pl-10">
+                    <div x-show="open" x-transition:enter="transform transition ease-in-out duration-500 sm:duration-700" x-transition:enter-start="translate-x-full" x-transition:enter-end="translate-x-0" x-transition:leave="transform transition ease-in-out duration-500 sm:duration-700" x-transition:leave-start="translate-x-0" x-transition:leave-end="translate-x-full" class="pointer-events-auto w-screen max-w-md" x-description="Slide-over panel, show/hide based on slide-over state." @click.away="open = false">
+                      <div class="flex h-full flex-col overflow-y-scroll bg-white dark:bg-jumbo-800 py-6 shadow-xl">
+                        <div class="px-4 sm:px-6">
+                          <div class="flex items-start justify-between">
+                            <div class="text-lg font-medium text-gray-900 dark:text-jumbo-100" id="slide-over-title">
+                              Changelog
+                              <a class="text-xs hover:underline" href="{% url 'blog:post_category_list' slug='updates' %}">Read more updates</a>
+                            </div>
+                            <div class="ml-3 flex h-7 items-center">
+                              <button type="button" class="bg-white dark:bg-jumbo-800 rounded-xl p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 dark:hover:bg-jumbo-700 dark:text-jumbo-200 dark:hover:text-jumbo-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-cornflower-500 dark:focus:ring-cornflower-400/75" @click="open = false">
+                                <span class="sr-only">Close panel</span>
+                                <svg class="h-6 w-6" x-description="Heroicon name: outline/x" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" aria-hidden="true">
+                                  <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"></path>
+                                </svg>
+                              </button>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="relative mt-6 flex-1 px-4 sm:px-6">
+                          {% changelog %}
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           {% if not user.is_authenticated %}
-            <a href="{% url 'account_login' %}" class="text-xs lg:text-base font-medium text-gray-500 dark:text-jumbo-50 hover:underline">
+            <a href="{% url 'account_login' %}" class="ml-8 text-xs lg:text-base font-medium text-gray-500 dark:text-jumbo-50 hover:underline">
               Log in
             </a>
             <a href="{% url 'accounts:signup' %}" class="ml-8 inline-flex items-center justify-center px-3 py-2 lg:px-4 lg:py-2 border border-transparent rounded-xl shadow-sm text-xs lg:text-base font-medium text-white bg-cornflower-600 hover:bg-cornflower-700">
               Sign up
             </a>
           {% else %}
-            <a href="{% url 'account_logout' %}" class="text-xs lg:text-base font-medium text-gray-500 dark:text-jumbo-50 hover:underline">
+            <a href="{% url 'account_logout' %}" class="ml-8 text-xs lg:text-base font-medium text-gray-500 dark:text-jumbo-50 hover:underline">
               Log out
             </a>
             <a href="{% url 'accounts:profile' slug=user.slug %}" class="ml-8 inline-flex items-center justify-center px-3 py-2 border border-transparent rounded-xl shadow-sm text-xs lg:text-base font-medium text-white bg-cornflower-600 hover:bg-cornflower-700">
@@ -63,7 +100,7 @@
             <img class="h-8 w-auto" width="2rem" height="2rem" src="{% static 'khoBlog/img/RuthinkkTooBig.webp' %}" alt="Khodok's Logo">
           </div>
           <div class="-mr-2">
-            <button type="button" class="bg-white dark:bg-jumbo-700 rounded-xl p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-jumbo-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-cornflower-500 dark:focus:ring-cornflower-400/75" @click="open=false">
+            <button type="button" class="bg-white dark:bg-jumbo-800 rounded-xl p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 dark:hover:bg-jumbo-700 dark:text-jumbo-200 dark:hover:text-jumbo-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-cornflower-500 dark:focus:ring-cornflower-400/75" @click="open=false">
               <span class="sr-only">Close menu</span>
               <svg class="h-6 w-6" x-description="Heroicon name: outline/x" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor" aria-hidden="true">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
