--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -100,7 +100,7 @@
     {% endif %}
   </head>
 
-  <body class="antialiased min-h-screen bg-white dark:bg-jumbo-900 dark:text-jumbo-100">
+  <body class="antialiased min-h-screen overflow-y-scroll bg-white dark:bg-jumbo-900 dark:text-jumbo-100">
     {% if not debug_flag %}
       {% analytical_body_top %}
 
