--- a/khoBlog/templates/tailwind/menu.html
+++ b/khoBlog/templates/tailwind/menu.html
@@ -34,8 +34,8 @@
             </a>
           {% endif %}
         </nav>
-        <div class="flex items-center md:ml-12">
-          <div x-cloak x-data="{ open: false }">
+        <article class="flex items-center md:ml-12">
+          <section x-cloak x-data="{ open: false }">
             <button class="text-xs lg:text-base font-medium text-gray-500 dark:text-jumbo-50 hover:underline" @click="open=!open">Latest changes</button>
 
             <div @keydown.window.escape="open = false" x-show="open" class="relative z-10" aria-labelledby="slide-over-title" x-ref="dialog" aria-modal="true">
@@ -45,12 +45,11 @@
                 <div class="absolute inset-0 overflow-hidden">
                   <div class="pointer-events-none fixed inset-y-0 right-0 flex max-w-full pl-10">
                     <div x-show="open" x-transition:enter="transform transition ease-in-out duration-500 sm:duration-700" x-transition:enter-start="translate-x-full" x-transition:enter-end="translate-x-0" x-transition:leave="transform transition ease-in-out duration-500 sm:duration-700" x-transition:leave-start="translate-x-0" x-transition:leave-end="translate-x-full" class="pointer-events-auto w-screen max-w-md" x-description="Slide-over panel, show/hide based on slide-over state." @click.away="open = false">
-                      <div class="flex h-full flex-col overflow-y-scroll bg-white dark:bg-jumbo-800 py-6 shadow-xl">
+                      <div class="flex h-full flex-col bg-white dark:bg-jumbo-800 py-6 shadow-xl">
                         <div class="px-4 sm:px-6">
                           <div class="flex items-start justify-between">
                             <div class="text-lg font-medium text-gray-900 dark:text-jumbo-100" id="slide-over-title">
                               Changelog
-                              <a class="text-xs hover:underline" href="{% url 'blog:post_category_list' slug='updates' %}">Read more updates</a>
                             </div>
                             <div class="ml-3 flex h-7 items-center">
                               <button type="button" class="bg-white dark:bg-jumbo-800 rounded-xl p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 dark:hover:bg-jumbo-700 dark:text-jumbo-200 dark:hover:text-jumbo-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-cornflower-500 dark:focus:ring-cornflower-400/75" @click="open = false">
@@ -71,7 +70,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </section>
           {% if not user.is_authenticated %}
             <a href="{% url 'account_login' %}" class="ml-8 text-xs lg:text-base font-medium text-gray-500 dark:text-jumbo-50 hover:underline">
               Log in
@@ -87,7 +86,7 @@
               Your profile
             </a>
           {% endif %}
-        </div>
+        </article>
       </div>
     </div>
   </div>
