links in light mode

--- a/khoBlog/templates/tailwind/changelog.html
+++ b/khoBlog/templates/tailwind/changelog.html
@@ -27,7 +27,7 @@
                 </div>
                 {% if forloop.last %}
                   <div class="relative">
-                    <a class="absolute top-6 text-xs text-cornflower-300 hover:text-cornflower-200" href="{% url 'blog:post_category_list' slug='updates' %}">
+                    <a class="absolute top-6 text-xs text-cornflower-600 hover:text-cornflower-400 dark:text-cornflower-200 dark:hover:text-cornflower-400" href="{% url 'blog:post_category_list' slug='updates' %}">
                       Read changelog
                       <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3 inline" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M17 8l4 4m0 0l-4 4m4-4H3" />
